@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kcm-ufw
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kcm-ufw/ChangeLog,v 1.9 2012/06/14 19:42:36 thev00d00 Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kcm-ufw/ChangeLog,v 1.10 2012/09/23 18:25:46 thev00d00 Exp $
+
+  23 Sep 2012; Ian Whyman <thev00d00@gentoo.org> -kcm-ufw-0.4.1-r3.ebuild:
+  Drop old
 
   14 Jun 2012; Ian Whyman <thev00d00@gentoo.org> kcm-ufw-0.4.3.ebuild:
   Fix net-firewall/ufw dependency
